2012-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: For testing on MinGW, assume that Postscript is
	available since we don't have a good way to check for that.

	* scripts/tap-functions.shi (test_count): Always execute the test
	program rather than skipping execution since we want to make sure
	the test program fails correctly as well.

	* coders/gif.c (DecodeImage): Add a log message for attempted LZW
	string data table overflow.

2012-08-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (ConvolveImage): Allocate normalized convolution
	kernel using cache-line aligned memory allocator.

	* configure.ac: Remove support for legacy LZWDecodeDelegate and
	LZWEncodeDelegate since these are not used any more.

2012-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* scripts/tap-functions.shi: If a test declares that it needs
	certain features, skip the test if required features are not
	available.

	* configure.ac: Build a supported features list and save to
	common.shi script for use by test scripts.

	* Makefile.am (LOG_COMPILER): Run Bourne-shell based TAP scripts
	with the same shell $(SHELL) that configure selected for the
	Makefile to use.

2012-08-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (AUTOMAKE_OPTIONS): Update to Automake 1.12.3.
	Update test suite to use Automake TAP driver rather than legacy
	tests.

2012-08-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jnx.c (ExtractTileJPG): Add a trace of tile offset and size.

2012-08-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jnx.c (ExtractTileJPG): Use a memory buffer for the JPEG
	tile rather than a temporary file.

2012-08-12  Fojtik Jaroslav  <JaFojtik@seznam.cz>

        * PerlMagick/t/input_jnx.jnx: Small JNX test file.

2012-08-11  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/jnx.c: speedup.
          gm benchmark convert Demo.jnx Demo.gif