@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020120823"
-#define public MagickPackageReleaseDate "snapshot-20120823"
+#define public MagickPackageVersionAddendum ".020120826"
+#define public MagickPackageReleaseDate "snapshot-20120826"
